:pencil: Updated docs with get_health() method

--- a/docs/pages/clients/client.mdx
+++ b/docs/pages/clients/client.mdx
@@ -201,6 +201,15 @@ def get_genesis_hash()
 ```
 </Code>
 
+#### .get_health
+Returns the current health of the node.
+
+<Code>
+```python 
+def get_health()
+```
+</Code>
+
 #### .get_supply
 Returns information about the current supply.
 
