:pencil: Updated docs with get_identity() and added missing link to get_health()

--- a/docs/pages/clients/client.mdx
+++ b/docs/pages/clients/client.mdx
@@ -30,6 +30,8 @@ import Callout from 'nextra-theme-docs/callout'
 - [get_fees](#get_fees)
 - [get_first_available_block](#get_first_available_block)
 - [get_genesis_hash](#get_genesis_hash)
+- [get_health](#get_health)
+- [get_identity](#get_identity)
 - [get_supply](#get_supply)
 - [get_block](#get_block)
 - [get_transaction](#get_transaction)
@@ -207,6 +209,15 @@ Returns the current health of the node.
 <Code>
 ```python 
 def get_health()
+```
+</Code>
+
+#### .get_identity
+Returns the current health of the node.
+
+<Code>
+```python 
+def get_identity()
 ```
 </Code>
 
