--- a/docs/pages/clients/client_async.mdx
+++ b/docs/pages/clients/client_async.mdx
@@ -2,7 +2,7 @@ import { Code } from '/components/Code';
 import Callout from 'nextra-theme-docs/callout'
 
 # AsyncClient
-**The base ***async*** client object used to interact with the blockchain. This is is identical to normal sync client, the only difference is that all methods are asynchronous.**
+**The base ***async*** client object used to interact with the blockchain. This is identical to normal sync client, the only difference is that all methods are asynchronous.**
 
 <Code>
   ```python 
@@ -10,7 +10,7 @@ import Callout from 'nextra-theme-docs/callout'
   ```
 </Code>
 
-> To initialize a async client, one of the three [RPC cluster endpoint URLs](https://docs.solana.com/cluster/rpc-endpoints) must be passed. When running a local cluster, the local argument must be passed as true for the local endpoint to work.
+> To initialize an async client, one of the three [RPC cluster endpoint URLs](https://docs.solana.com/cluster/rpc-endpoints) must be passed. When running a local cluster, the local argument must be passed as true for the local endpoint to work.
 
 #### Methods
 - [refresh_http](#refresh_http)
