--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -26,7 +26,7 @@ pip install solathon
 </Code>
 
 ### ✨ Easy to use
-Using object-oriented approach, Solathon makes everything easy to understand and work with. The documentation has detailed explaination with examples for everything to get anyone started quickly.
+Using object-oriented approach, Solathon makes everything easy to understand and work with. The documentation includes detailed explanations with examples to get anyone started quickly.
 
 ### ⚡Feature rich
 Most of the Solana JSON RPC with the latest methods are supported. Other than that, many utility functions are also provided which come in handy often.
