--- a/docs/pages/models/transaction/instructions.mdx
+++ b/docs/pages/models/transaction/instructions.mdx
@@ -1,7 +1,7 @@
 import { Code } from '/components/Code';
 
 # Instructions
-**A transaction requires you to have instructions which it will execute, following functions are the available instructions which you can use.**
+**A transaction requires you to have instructions which it will execute. The following functions are the available instructions which you can use.**
 #### Import syntax
 ```python
 from solathon.core.instructions import *
