:pencil: Updated docs with get_inflation_rate()

--- a/docs/pages/clients/client.mdx
+++ b/docs/pages/clients/client.mdx
@@ -213,7 +213,7 @@ def get_health()
 </Code>
 
 #### .get_identity
-Returns the identity public key for the current node
+Returns the identity public key for the current node.
 
 <Code>
 ```python 
@@ -227,6 +227,15 @@ Returns the current inflation governor.
 <Code>
 ```python 
 def get_inflation_governor()
+```
+</Code>
+
+#### .get_inflation_rate
+Returns the specific inflation values for the current epoch.
+
+<Code>
+```python 
+def get_inflation_rate()
 ```
 </Code>
 
