:pencil: Updated docs with get_leader_schedule method

--- a/docs/pages/clients/client.mdx
+++ b/docs/pages/clients/client.mdx
@@ -36,6 +36,7 @@ import Callout from 'nextra-theme-docs/callout'
 - [get_inflation_rate](#get_inflation_rate)
 - [get_inflation_reward](#get_inflation_reward) 
 - [get_largest_accounts](#get_largest_accounts)
+- [get_leader_schedule](#get_leader_schedule)
 - [get_supply](#get_supply)
 - [get_transaction](#get_transaction)
 - [get_recent_blockhash](#get_recent_blockhash)
@@ -259,6 +260,16 @@ make an exception for a TimeoutError.
 <Code>
 ```python 
 def get_largest_accounts()
+```
+</Code>
+
+#### .get_leader_schedule
+Returns the leader schedule for an epoch.
+Lots of data!
+
+<Code>
+```python 
+def get_leader_schedule()
 ```
 </Code>
 
