:pencil: Updated docs with get_max_retransmit_slot

--- a/docs/pages/clients/client.mdx
+++ b/docs/pages/clients/client.mdx
@@ -37,6 +37,7 @@ import Callout from 'nextra-theme-docs/callout'
 - [get_inflation_reward](#get_inflation_reward) 
 - [get_largest_accounts](#get_largest_accounts)
 - [get_leader_schedule](#get_leader_schedule)
+- [get_max_retransmit_slot](#get_max_retransmit_slot)
 - [get_supply](#get_supply)
 - [get_transaction](#get_transaction)
 - [get_recent_blockhash](#get_recent_blockhash)
@@ -270,6 +271,15 @@ Lots of data!
 <Code>
 ```python 
 def get_leader_schedule()
+```
+</Code>
+
+#### .get_max_retransmit_slot
+Get the max slot seen from retransmit stage.
+
+<Code>
+```python 
+def get_max_retransmit_slot()
 ```
 </Code>
 
