:pencil: Updated docs with two new methods.

--- a/docs/pages/clients/client.mdx
+++ b/docs/pages/clients/client.mdx
@@ -283,6 +283,24 @@ def get_max_retransmit_slot()
 ```
 </Code>
 
+#### .get_max_shred_insert_slot
+Get the max slot seen from after shred insert.
+
+<Code>
+```python 
+def get_max_shred_insert_slot()
+```
+</Code>
+
+#### .get_minimum_balance_for_rent_exmeption
+Returns minimum balance required to make account rent exempt.
+
+<Code>
+```python 
+def get_minimum_balance_for_rent_exmeption()
+```
+</Code>
+
 #### .get_supply
 Returns information about the current supply.
 
