--- a/docs/pages/clients/client.mdx
+++ b/docs/pages/clients/client.mdx
@@ -185,7 +185,7 @@ def get_fee_for_message(message: str)
 </Code>
 
 <Callout emoji="⚠️" type="warning">
-    <p style={{fontSize:"1rem"}}>This method is only available in solana-core v1.9 or newer. For now, use get_fees method.</p>
+    <p style={{fontSize:"1rem"}}>This method is only available in solana-core v1.9 or newer</p>
 </Callout>
 
 #### .get_fees
