--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -64,7 +64,7 @@ from solathon import Client, PublicKey
 ㅤ
 client = Client("https://api.devnet.solana.com")
 public_key = PublicKey("B3BhJ1nvPvEhx3hq3nfK8hx4WYcKZdbhavSobZEA44ai")
-balance = Client.get_balance(public_key)
+balance = client.get_balance(public_key)
 ㅤ
 print(balance)
 ```
