--- a/docs/pages/clients/client.mdx
+++ b/docs/pages/clients/client.mdx
@@ -464,6 +464,6 @@ print("Transaction response: ", result)
 
 ## Attributes
 #### .endpoint
-Returns the endpoint which the client is currentlly using.
+Returns the endpoint which the client is currently using.
 #### .http
 Returns the http object being used to interact with the JSON RPC.
