--- a/docs/pages/clients/client_async.mdx
+++ b/docs/pages/clients/client_async.mdx
@@ -453,6 +453,6 @@ asyncio.run(main())
 
 ## Attributes
 #### .endpoint
-Returns the endpoint which the client is currentlly using.
+Returns the endpoint which the client is currently using.
 #### .http
 Returns the http object being used to interact with the JSON RPC.
